--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@
 /*      border: none;
      border-right: initial;*/
      border-color: black; 
-     color : #e7dcdc;
+     color : black;
      margin-right: 2%;
     float: right !important;
 }
