--- a/style.css
+++ b/style.css
@@ -100,12 +100,12 @@
 .navbar-button{
     width:12%;
     margin-top:1vh;
-     /*border-radius:30px;*/
+     border-radius:30px;
      background-color:transparent;
 /*      border: none;
      border-right: initial;*/
-     border-color: black; 
-     color : black;
+/*      border-color: black; 
+     color : black; */
      margin-right: 2%;
     float: right !important;
 }
