--- a/style.css
+++ b/style.css
@@ -102,8 +102,8 @@
     margin-top:1vh;
      border-radius:30px;
      background-color:transparent;
-/*      border: none;
-     border-right: initial;*/
+   border: none;
+     /*border-right: initial;*/
 /*      border-color: black; 
      color : black; */
      margin-right: 2%;
