--- a/style.css
+++ b/style.css
@@ -350,7 +350,7 @@ body {
 .service-header { 
     color: #3B5957;
 	font-weight: bolder;
-	background: 	;
+	background: #bf926b	;
 	width: fit-content;
 	font-size: 30px;
     height: 100%;
